--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ renderiza la aplicación.
 
 <head>
   <meta charset="utf-8">
-  <title>Estructura Proyecto</title>
+  <title>MyApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
