--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@ el favicon y la vista para dispositivos móviles. Además, incluye
 la etiqueta <app-root>, que es el contenedor donde Angular
 renderiza la aplicación.
 -->
-
 <!doctype html>
 <html lang="es">
 
@@ -15,6 +14,11 @@ renderiza la aplicación.
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
